tests/error/linear_errors/for_return.err
Error: Break in non-droppable loop (at $FILE:17:12)
   | 
15 |         rs += [q]
16 |         if b:
17 |             return []
   |             ^^^^^^^^^ Early exit in non-droppable loops is not allowed
   | 
14 |     for q, b in qs:
   |                 -- Iterator has non-droppable type `list[(qubit, bool)]`

Guppy compilation failed due to 1 previous error
